another fix to actions not aligned

--- a/assets/css/apps/mail/cmps/MailPreview.css
+++ b/assets/css/apps/mail/cmps/MailPreview.css
@@ -10,7 +10,7 @@ table {
 
 .mail-card {
   display: grid;
-  grid-template-columns: 1fr 9fr 2fr;
+  grid-template-columns: 1fr 7fr 2fr;
   padding: 0em;
 
 
